--- a/erkeb/Info.plist
+++ b/erkeb/Info.plist
@@ -45,5 +45,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Erkeb heeft uw locatie nodig zodat onze bestuurders u terug kan vinden.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Erkeb heeft uw locatie nodig zodat onze bestuurders u terug kan vinden.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Erkeb heeft uw locatie nodig zodat onze bestuurders u terug kan vinden.</string>
 </dict>
 </plist>
